@@ -17,10 +17,8 @@
 #include <sstream>
 #include <fstream>
 
-#define SHM_KEYPATH          "/dev/null" /* Path used on ftok for shmget key  */
 #define SHM_DESCRIPTOR_KEYID           1 /* Id used on ftok for 1. shmget key */
 #define SHM_KEYID                      2 /* Id used on ftok for 2. shmget key */
-#define SEM_KEYPATH          "/dev/null" /* Path used on ftok for semget key  */
 #define SEM_KEYID                      1 /* Id used on ftok for semget key    */
 
 #define NSKIP_MAX                    100
@@ -28,6 +26,11 @@
 
 using namespace std;
 using namespace evf;
+
+const char* FUShmBuffer::shmKeyPath_ =
+  (getenv("FUSHM_KEYFILE") == NULL ? "/dev/null" : getenv("FUSHM_KEYFILE"));
+const char* FUShmBuffer::semKeyPath_ =
+  (getenv("FUSEM_KEYFILE") == NULL ? "/dev/null" : getenv("FUSEM_KEYFILE"));
 
 
 ////////////////////////////////////////////////////////////////////////////////
@@ -161,7 +164,7 @@ void FUShmBuffer::initialize(unsigned int shmid,unsigned int semid)
     int    shmKeyId=666;
     key_t* keyAddr =(key_t*)((unsigned int)this+rawCellOffset_);
     for (unsigned int i=0;i<nRawCells_;i++) {
-      *keyAddr     =ftok("/dev/null",shmKeyId++);
+      *keyAddr     =ftok(shmKeyPath_,shmKeyId++);
       int   shmid  =shm_create(*keyAddr,rawCellTotalSize_);
       void* shmAddr=shm_attach(shmid);
       new (shmAddr) FUShmRawCell(rawCellPayloadSize_);
@@ -170,7 +173,7 @@ void FUShmBuffer::initialize(unsigned int shmid,unsigned int semid)
     }
     keyAddr =(key_t*)((unsigned int)this+recoCellOffset_);
     for (unsigned int i=0;i<nRecoCells_;i++) {
-      *keyAddr     =ftok("/dev/null",shmKeyId++);
+      *keyAddr     =ftok(shmKeyPath_,shmKeyId++);
       int   shmid  =shm_create(*keyAddr,recoCellTotalSize_);
       void* shmAddr=shm_attach(shmid);
       new (shmAddr) FUShmRecoCell(recoCellPayloadSize_);
@@ -179,7 +182,7 @@ void FUShmBuffer::initialize(unsigned int shmid,unsigned int semid)
     }
     keyAddr =(key_t*)((unsigned int)this+dqmCellOffset_);
     for (unsigned int i=0;i<nDqmCells_;i++) {
-      *keyAddr     =ftok("/dev/null",shmKeyId++);
+      *keyAddr     =ftok(shmKeyPath_,shmKeyId++);
       int   shmid  =shm_create(*keyAddr,dqmCellTotalSize_);
       void* shmAddr=shm_attach(shmid);
       new (shmAddr) FUShmDqmCell(dqmCellPayloadSize_);
@@ -950,9 +953,9 @@ unsigned int FUShmBuffer::size(bool         segmentationMode,
 //______________________________________________________________________________
 key_t FUShmBuffer::getShmDescriptorKey()
 {
-  key_t result=ftok(SHM_KEYPATH,SHM_DESCRIPTOR_KEYID);
-  if (result==(key_t)-1)
-    cout<<"FUShmBuffer::getShmDescriptorKey: ftok() failed!"<<endl;
+  key_t result=ftok(shmKeyPath_,SHM_DESCRIPTOR_KEYID);
+  if (result==(key_t)-1) cout<<"FUShmBuffer::getShmDescriptorKey: ftok() failed "
+			     <<"for file "<<shmKeyPath_<<"!"<<endl;
   return result;
 }
 
@@ -960,8 +963,9 @@ key_t FUShmBuffer::getShmDescriptorKey()
 //______________________________________________________________________________
 key_t FUShmBuffer::getShmKey()
 {
-  key_t result=ftok(SHM_KEYPATH,SHM_KEYID);
-  if (result==(key_t)-1) cout<<"FUShmBuffer::getShmKey: ftok() failed!"<<endl;
+  key_t result=ftok(shmKeyPath_,SHM_KEYID);
+  if (result==(key_t)-1) cout<<"FUShmBuffer::getShmKey: ftok() failed "
+			     <<"for file "<<shmKeyPath_<<"!"<<endl;
   return result;
 }
 
@@ -969,8 +973,9 @@ key_t FUShmBuffer::getShmKey()
 //______________________________________________________________________________
 key_t FUShmBuffer::getSemKey()
 {
-  key_t result=ftok(SEM_KEYPATH,SEM_KEYID);
-  if (result==(key_t)-1) cout<<"FUShmBuffer::getSemKey: ftok() failed!"<<endl;
+  key_t result=ftok(semKeyPath_,SEM_KEYID);
+  if (result==(key_t)-1) cout<<"FUShmBuffer::getSemKey: ftok() failed "
+			     <<"for file "<<semKeyPath_<<"!"<<endl;
   return result;
 }
 
